force-app/main/default/objects/SPEN_MessagingTask__c/SPEN_MessagingTask__c.object-meta.xml
<CustomObject>
    <description>This object allows agents to set up and configure broadcast messaging via SMS, Voice Alerts, etc.</description>
    <label>Messaging Task</label>
    <nameField>
        <displayFormat>MST-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>