force-app/main/default/objects/SPEN_MessagingTask__c/fields/Incident_Outage_Status__c.field-meta.xml
<CustomField>
    <fullName>Incident_Outage_Status__c</fullName>
    <label>Incident Outage Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>