force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_Category__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Category__c</fullName>
    <description>It will be used to identify the type for which communication has been sent</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-Hour Comfort Call</fullName>
            </value>
            <value>
                <fullName>3rd Call Received</fullName>
            </value>
            <value>
                <fullName>Dropped Supply with Notice</fullName>
            </value>
            <value>
                <fullName>Dropped Supply without Notice</fullName>
            </value>
            <value>
                <fullName>Estimated Restoration Time Extended</fullName>
            </value>
            <value>
                <fullName>Incident Created</fullName>
            </value>
            <value>
                <fullName>Incident Restored</fullName>
            </value>
            <value>
                <fullName>Resource Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Resource Dispatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>