force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CreatedDateTime__c</fullName>
    <description>show created date and time</description>
    <formula>CreatedDate</formula>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>