force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_DroppedSupplyCheckbox__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DroppedSupplyCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will get the value based on the conditions from apex triggers as backend field.</description>
    <label>DroppedSupplyCheckbox</label>
    <type>Checkbox</type>
</CustomField>