force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_Incident_Outage_Flag__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Incident_Outage_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident Outage Flag</label>
    <type>Checkbox</type>
</CustomField>