force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The incident record that created the Messaging Task</description>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Messaging Tasks</relationshipLabel>
    <relationshipName>SPEN_MessagingTasks</relationshipName>
    <type>Lookup</type>
</CustomField>