force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_messagingTaskComments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_messagingTaskComments__c</fullName>
    <description>This field will store the information by agent why no action has been taken during toggle selection of the messaging task.</description>
    <label>Messaging Task Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>