force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_OnDemandRef__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OnDemandRef__c</fullName>
    <label>OnDemand Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>