force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_PremiseIds__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseIds__c</fullName>
    <label>PremiseIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>