force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_RemoveIncidentIVRMessageAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RemoveIncidentIVRMessageAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Incident IVR Message Action</label>
    <type>Checkbox</type>
</CustomField>