force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendSMSNonPSRCustomerinscopeAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMSNonPSRCustomerinscopeAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMSto NonPSRCustomer inscope Action</label>
    <type>Checkbox</type>
</CustomField>