force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendSMStoPSRCalledinAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMStoPSRCalledinAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS to PSR Called in Action</label>
    <type>Checkbox</type>
</CustomField>