force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendSMStoPSRCustomerinScopeAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMStoPSRCustomerinScopeAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS to PSR Customer in Scope Action</label>
    <type>Checkbox</type>
</CustomField>