force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendVAtoNonPSRCalledinAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoNonPSRCalledinAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to Non PSR Called in Action</label>
    <type>Checkbox</type>
</CustomField>