force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendVAtoNonPSRCustomerinScopeAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoNonPSRCustomerinScopeAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to NonPSRCustomer inScope Action</label>
    <type>Checkbox</type>
</CustomField>