force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendVAtoPSRCalledinAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoPSRCalledinAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to PSR Called in Action</label>
    <type>Checkbox</type>
</CustomField>