force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_SendVAtoPSRCustomersinScopeAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoPSRCustomersinScopeAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to PSR Customers in Scope Action</label>
    <type>Checkbox</type>
</CustomField>