force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <description>Shows the progress of the Message Task</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>