force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_UpdateIncidentIVRMessageAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UpdateIncidentIVRMessageAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Incident IVR Message Action</label>
    <type>Checkbox</type>
</CustomField>