force-app/main/default/objects/SPEN_MessagingTask__c/fields/SPEN_UpdateZoneIVRMessageAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UpdateZoneIVRMessageAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Zone IVR Message Action</label>
    <type>Checkbox</type>
</CustomField>