force-app/main/default/objects/SPEN_MessagingTask__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <description>When the Messaging Task record is driven from an Incident event</description>
    <label>Incident</label>
</RecordType>