force-app/main/default/objects/SPEN_MessagingTask__c/recordTypes/OnDemand.recordType-meta.xml
<RecordType>
    <fullName>OnDemand</fullName>
    <active>true</active>
    <description>To be used to upload CSV and send communication</description>
    <label>OnDemand</label>
</RecordType>