force-app/main/default/objects/SPEN_MessagingTask__c/validationRules/IncidentRequiredFieldEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>IncidentRequiredFieldEvent</fullName>
    <active>true</active>
    <description>The Event field is required if  the record type is Incident</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Incident&quot; &amp;&amp; 
ISPICKVAL(SPEN_Event__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>SPEN_Event__c</errorDisplayField>
    <errorMessage>The Event is required if the record type is set to Incident.</errorMessage>
</ValidationRule>