force-app/main/default/objects/SPEN_MessagingTask__c/validationRules/IncidentRequiredFieldIncident.validationRule-meta.xml
<ValidationRule>
    <fullName>IncidentRequiredFieldIncident</fullName>
    <active>true</active>
    <description>Incident field is required if  the record type is Incident</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Incident&quot; &amp;&amp; 
ISBLANK(SPEN_IncidentId__c)</errorConditionFormula>
    <errorDisplayField>SPEN_IncidentId__c</errorDisplayField>
    <errorMessage>The Incident is required if the record type is set to Incident.</errorMessage>
</ValidationRule>