force-app/main/default/objects/SPEN_MessagingTask__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>SPEN_IncidentId__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_MessagingTask__c.OnDemand</value>
    </filters>
    <label>In Progress</label>
</ListView>