force-app/main/default/objects/SPEN_MessagingTask__c/listViews/Messaging_Task_SPEN_MessagingTask.listView-meta.xml
<ListView>
    <fullName>Messaging_Task_SPEN_MessagingTask</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_CreatedDateTime__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Messaging Task</label>
    <queue>Messaging_Task_SPD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>