force-app/main/default/objects/SPEN_MessagingTask__c/listViews/New_Tasks.listView-meta.xml
<ListView>
    <fullName>New_Tasks</fullName>
    <columns>SPEN_IncidentId__c</columns>
    <columns>NAME</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>New Tasks</label>
</ListView>