force-app/main/default/objects/SPEN_MessagingTask__c/listViews/Open_Messaging_Tasks_from_PowerOn_Events.listView-meta.xml
<ListView>
    <fullName>Open_Messaging_Tasks_from_PowerOn_Events</fullName>
    <columns>SPEN_IncidentId__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Event__c</field>
        <operation>equals</operation>
        <value>Estimated Restoration Time Extended,Incident Created,Incident Restored,Resource Arrival On Site,Resource Dispatched</value>
    </filters>
    <label>Open Messaging Tasks from PowerOn Events</label>
</ListView>