force-app/main/default/objects/SPEN_MessagingTask__c/listViews/SPEN_OnDemandMessages.listView-meta.xml
<ListView>
    <fullName>SPEN_OnDemandMessages</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Category__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_OnDemandRef__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Alistair,Chris,Erin,Juliet,Lynsey</value>
    </filters>
    <filters>
        <field>SPEN_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>On Demand Messages</label>
</ListView>